<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/circuit" >

    <!--<TextView-->
        <!--android:id="@+id/lblDistancia"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_margin="5dp"-->
        <!--android:text="distancia"-->
        <!--android:textColor="@color/BlueViolet"-->
        <!--android:textSize="20dp" />-->

    <TextView
        android:id="@+id/lblNivel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        android:text="@string/nivel"
        android:textColor="@color/Blue"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        android:layout_toEndOf="@+id/btnConectar"
        android:orientation="horizontal" >


        <!-- <TextView -->
        <!-- android:id="@+id/lblPosicaoX" -->
        <!-- android:layout_width="wrap_content" -->
        <!-- android:layout_height="wrap_content" -->
        <!-- android:text="X" -->
        <!-- android:textColor="#444444" -->
        <!-- android:textSize="20dp" /> -->
        <!-- <TextView -->
        <!-- android:id="@+id/lblPosicaoY" -->
        <!-- android:layout_width="wrap_content" -->
        <!-- android:layout_height="wrap_content" -->
        <!-- android:text="Y" -->
        <!-- android:textColor="#444444" -->
        <!-- android:textSize="20dp" /> -->


        <!-- <TextView -->
        <!-- android:id="@+id/lblAngulo" -->
        <!-- android:layout_width="wrap_content" -->
        <!-- android:layout_height="wrap_content" -->
        <!-- android:text="Angulo" -->
        <!-- android:textColor="#444444" -->
        <!-- android:textSize="20dp" /> -->

        <TextView
            android:id="@+id/lblDirecao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/direcao"
            android:textColor="@color/Blue"
            android:textSize="20dp" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layout_joystick"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:background="@drawable/image_button_bg" >

    </RelativeLayout>

    <Button
        android:id="@+id/btnConectar"
        android:layout_width="100.0dip"
        android:layout_height="20.0dip"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/connect_ani"
        android:onClick="connectButtonPressed"
        android:text="@string/joystick_bt_connect"
        android:textAllCaps="true"
        android:textColor="@color/White"
        android:textSize="13.0dip" />

    <LinearLayout
        android:id="@+id/FundoDados"
        android:layout_width="100.0dip"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_margin="10dp"
        android:layout_toEndOf="@id/layout_joystick"
        android:background="@color/Black"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="invisible" >

        <TextView
            android:id="@+id/txtArduino01"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="6.0dip"
            android:gravity="center"
            android:text="N"
            android:textColor="@color/White"
            android:textSize="12.0sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/txtArduino02"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="6.0dip"
            android:gravity="center"
            android:text="N"
            android:textColor="@color/White"
            android:textSize="12.0sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/txtArduino03"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="6.0dip"
            android:gravity="center"
            android:text="N"
            android:textColor="@color/White"
            android:textSize="12.0sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/txtArduino04"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="6.0dip"
            android:gravity="center"
            android:text="N"
            android:textColor="@color/White"
            android:textSize="12.0sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/txtArduino05"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="6.0dip"
            android:gravity="center"
            android:text="N"
            android:textColor="@color/White"
            android:textSize="12.0sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/txtArduino06"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="6.0dip"
            android:gravity="center"
            android:text="N"
            android:textColor="@color/White"
            android:textSize="12.0sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/txtArduino07"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="6.0dip"
            android:gravity="center"
            android:text="N"
            android:textColor="@color/White"
            android:textSize="12.0sp"
            android:visibility="invisible" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/botoeBaixo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp" >

        <LinearLayout
            android:id="@+id/botoesABC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/bt_a"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/layout_botao_a" />

            <Button
                android:id="@+id/bt_b"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/layout_botao_b" />

            <Button
                android:id="@+id/bt_c"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/layout_botao_c" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_toStartOf="@id/botoesABC"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/bt_x"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/layout_botao_x" />

            <Button
                android:id="@+id/bt_y"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/layout_botao_y" />

            <Button
                android:id="@+id/bt_z"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/layout_botao_z" />
        </LinearLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/btnReConectar"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        android:layout_toEndOf="@+id/btnConectar"
        android:background="@drawable/ic_reconect"
        android:onClick="reconect" />

</RelativeLayout>